# george

./: .gitmodules  LICENSE  README.md
docker/: Dockerfile.navigation  Dockerfile.ros2  Dockerfile.whisper  docker-compose.yaml  george.service  install_ros2.sh
navigation.node/navigation/: setup.py
navigation.node/navigation/navigation/: display.py  interpreter.py  navigation.py
whisper.custom/: CMakeLists.txt  stream.cpp
whisper.node/voice_commands/: package.xml  setup.cfg  setup.py
whisper.node/voice_commands/voice_commands/: stream_listener.py
